Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-128637

race condition with async Shape(Path)

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P2: Important P2: Important
    • 6.8.1, 6.9.0 FF
    • 6.7
    • Quick: Shapes
    • None
    • Linux/Wayland
    • e6ae6c7d6 (dev), 287c19ee9 (6.8)

      It appears there is a race condition when an async ShapePath's bindings change while a runner is active. The bindings change gets ignored entirely.

      This also apparently happens when using a non-trivial setup involving multiple instantiators of which at least one is async, though I haven't managed to reproduce that outside our application code.

      I'm attaching an example. It creates a path relative to the dimension of a parent item. A timer changes that dimension shortly after creation, this change will not be picked up. Another timer runs 4s later and will trigger a correct update.

      Downstream seen in https://bugs.kde.org/show_bug.cgi?id=492326 where the item changes dimension as part of layouting and eventually gets redrawn correctly when we change fillColor of the Shape when the user hovers where the Shape is actually meant to be.

        1. shape.qml
          2 kB
          Harald Sitter
        2. 2024-09-05 01-07-44.mkv
          1.56 MB
          Harald Sitter
        3. log
          74 kB
          Harald Sitter
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            vgt Eirik Aavitsland
            apachelogger Harald Sitter
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes